# bootstrapRRust

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: RcppExports.R  bootstrap.R  bootstrapCppRs.R  zzz.R
man/: bootstrap.Rd  bootstrapCppRs-package.Rd  bootstrapCppRs.Rd  bootstrap_cpp.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  bootstrap_rcpp.cpp  wrapper.c
src/myrustlib/: Cargo.toml  api.h  cbindgen.toml
src/myrustlib/src/: bootstrap.rs  build.rs  lib.rs
tests/: testthat.R
tests/testthat/: test-bootstrap.R
