[package]
name = "myrustlib"
version = "0.1.0"
authors = ["Jordan Mark Barbone <jmbarbone@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
rand = "0.7.3"
cbindgen = "0.14.2"
libc = "0.2.70"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
